[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/BuffUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Icon/defense_boost.tres" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Icon/speed_boost.tres" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Icon/attack_boost.tres" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 3.2, 3.2 ), Vector2( 3, 3 ) ]
}

[node name="BuffUI" type="Control"]
margin_left = 170.0
margin_top = -290.0
margin_right = 170.0
margin_bottom = -290.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
rect_scale = Vector2( 3.11685, 3.11685 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackBoost" type="TextureRect" parent="VBoxContainer"]
margin_right = 29.0
margin_bottom = 27.0
texture = ExtResource( 4 )

[node name="DefenseBoost" type="TextureRect" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 29.0
margin_bottom = 60.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedBoost" type="TextureRect" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 29.0
margin_bottom = 94.0
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animate"
anims/animate = SubResource( 1 )
